Techkiz - Dev challenge

--- a/Techkiz project - a facebook app , 2nd place winner/Chllenge App.html
+++ b/Techkiz project - a facebook app , 2nd place winner/Chllenge App.html
@@ -3,8 +3,8 @@
 <style>
 .container {
     position: absolute;
-    top: 8px;
-    right: 250px;
+    top: 10px;
+    right: 270px;
     font-size: 18px
 }
 .container2 {
@@ -31,7 +31,7 @@
 <p style="text-align:center;font-family:verdana;"># How was your birthday on facebook </li>
 </p>
 <div class="container">
-<img hspace="700" src="https://png2.kisspng.com/sh/db2de12b57834c949c4353350cafa923/L0KzQYm3VcEzN5x8j5H0aYP2gLBuTgNieF54fZ91b3fyPcTokL1meqEyi9N5LYOwRLnojvEue5J1RdR5Yz24cbeAVsM5OmhnTdYENz68RIOBVsE1PmI6Sqg6NkK2QIe8UMU0NqFzf3==/kisspng-sap-se-logo-sap-erp-sap-s-4hana-sap-bpc-5af763827b5d97.9428614615261623065053.png" width="300" height="180">
+<img hspace="700" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSsGRH3p_9CSmKaWg0S5WVUP525GCjm6qLRxSw_ESYz4Q5-HxpbMQ" width="300" height="180">
 </div>
 <div class="container2">
 </br>
@@ -291,7 +291,7 @@ function makeDate(str){
 
 </script>
 
-<body style="background-color:powderblue;">
+<body style=" background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSFrVe6p-wsd1WVgqZk33iXe-6frxl-W40Zh8EZQnVc4yFxZp3vsw')">
 <p style="text-align:center;font-family:verdana;">
 <input type="checkbox" id="checkbox" value="changed" > Remember me
     </p>
