HTML and Javasript

--- a/html and javascript/pig dice game advanced version included/index.html
+++ b/html and javascript/pig dice game advanced version included/index.html
@@ -33,10 +33,13 @@
             <button class="btn-roll"><i class="ion-ios-loop"></i>Roll dice</button>
             <button class="btn-hold"><i class="ion-ios-download-outline"></i>Hold</button>
             <button class="btn-rules"><i class="rules"></i>Rules</button>
+            <button class="btn-mode"><i class="btn_mode"></i>Advanced mode</button>
+            <input type="text" placeholder="Set winning score" class="score"> 
             
             <img src="dice-5.png" alt="Dice" class="dice">
+            <img src="dice-5.png" alt="Dice" class="dice2">
         </div>
         
-        <script src="pig game script.js"></script>
+        <script src="pig game script_updated.js"></script>
     </body>
 </html>
